Fix hotspot + alignment

--- a/examples/infographic/infographic.css
+++ b/examples/infographic/infographic.css
@@ -429,12 +429,6 @@
   transition: all .5s;
 }
 
-@media screen and (min-width: 89em) {
-  .hotspot a {
-    line-height: .5;
-  }
-}
-
 .hotspot a:visited {
   color: #7ac142;
 }
